k8s/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.1
          args:
            - start-dev
            - --import-realm
#            - --features=login2
          ports:
            - containerPort: 8080
              protocol: TCP
#            - containerPort: 8443
#              protocol: TCP
            - containerPort: 9000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /auth/health/started
              port: 9000
            failureThreshold: 20
            periodSeconds: 10
          readinessProbe:
              httpGet:
                path: /auth/health/ready
                port: 9000
              initialDelaySeconds: 5
              periodSeconds: 10
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: keycloak-cm0
#            - mountPath: /opt/keycloak/conf/certfile.pem
#              name: keycloak-cm1
#              subPath: certfile.pem
#            - mountPath: /opt/keycloak/conf/keyfile.pem
#              name: keycloak-cm2
#              subPath: keyfile.pem
      restartPolicy: Always
      volumes:
        - configMap:
            name: keycloak-cm0
          name: keycloak-cm0
#        - configMap:
#            items:
#              - key: cert.pem
#                path: certfile.pem
#            name: keycloak-cm1
#          name: keycloak-cm1
#        - configMap:
#            items:
#              - key: key.pem
#                path: keyfile.pem
#            name: keycloak-cm2
#          name: keycloak-cm2
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
#    - name: "8443"
#      port: 8443
#      targetPort: 8443
    - name: "9000"
      port: 9000
#      nodePort: 30090
      targetPort: 9000
