k8s/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    db: postgres
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      db: postgres
      role: service
  serviceName: postgres
  template:
    metadata:
      labels:
        db: postgres
        role: service
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/pg_isready
            failureThreshold: 5
            initialDelaySeconds: 80
            periodSeconds: 30
            timeoutSeconds: 60
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    db: postgres
    role: service
spec:
  selector:
    db: postgres
    role: service
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
