k8s/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - image: ghcr.io/totterman/ycbr/ui:0.9.1
          name: ui
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "67108864"
#          volumeMounts:
#            - mountPath: /etc/nginx/ssl/certfile.pem
#              name: ui-cm0
#              subPath: certfile.pem
#            - mountPath: /etc/nginx/ssl/keyfile.pem
#              name: ui-cm1
#              subPath: keyfile.pem
      restartPolicy: Always
#      volumes:
#        - configMap:
#            items:
#              - key: cert.pem
#                path: certfile.pem
#            name: ui-cm0
#          name: ui-cm0
#        - configMap:
#            items:
#              - key: key.pem
#                path: keyfile.pem
#            name: ui-cm1
#          name: ui-cm1
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
